# libpyinterp

./: CMakeLists.txt  README
examples/: py_interp_main.cpp
include/: auto_ptr.h  config.h  cxx_compatibility.h  lexical_cast.h  lock_guard.h  py_error.h  py_gil_guard.h  py_interpreter_pool.h  py_interpreter_pool_guard.h  py_processor.h  py_tools.h  strutl.h  trace.h
src/: py_error.cpp  py_interpreter_pool.cpp  py_processor.cpp  py_tools.cpp  trace.cpp
unittests/: CMakeLists.txt  lexical_cast_test.cpp  lock_guard_test.cpp  py_interpreter_pool_test.cpp  strutl_test.cpp
