cmake_minimum_required(VERSION 3.10)
project(pyinterp)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-Wall -O2")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/lib)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_library(pyinterp SHARED ${SOURCES})
add_executable(pyinterpreter examples/py_interp_main.cpp)
add_subdirectory(unittests)
install(TARGETS pyinterp DESTINATION /usr/local/lib)
install(TARGETS pyinterpreter DESTINATION /usr/local/bin)
