cmake_minimum_required(VERSION 3.9.1)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
find_package(GTest REQUIRED)
find_package(PythonInterp 2.7 REQUIRED)
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
include_directories(../include)
file(GLOB SOURCES "*.cpp")
add_executable(pygtestrun ${SOURCES})
target_link_libraries(pygtestrun ${GTEST_LIBRARIES} pyinterp python2.7 pthread dl util m gtest gtest_main)
